Gateway/gateway-virtualservice.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookapp-gateway-virtualservice
spec:
  hosts:
  - "deep.com"
  gateways:
  - bookapp-gateway
  http:
  - name : 'route1'
    route:
    - destination:
        host: bookapp-svc.default.svc.cluster.local
        subset: bookapp-subset-v1
      weight: 80
    - destination:
        host: bookapp-svc.default.svc.cluster.local
        subset: bookapp-subset-v2
      weight: 20
