Gateway/virtualservice.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookapp-virtualservice-internal
spec:
  hosts:
  - bookapp-svc.default.svc.cluster.local
  http:
  - name: route1
    route:
    - destination:
        host: bookapp-svc.default.svc.cluster.local
        subset: bookapp-subset-v1
      weight: 80
    - destination:
        host: bookapp-svc.default.svc.cluster.local
        subset: bookapp-subset-v2
      weight: 20
